update mostly on links for papers

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -119,6 +119,46 @@
 						
 <h1><a name="Journal"></a>Journal</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 4, GROUP.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/jones2022rescuecastr"><span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+
+(journal).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/kudo2021balancing/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/jones2020wsar"><span id="jones2020wsar">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2020). <span style="text-decoration: underline">Remote Communication in Wilderness Search and Rescue: Implications for the Design of Emergency Distributed-Collaboration Tools for Network-Sparse Environments</span>. <i>Proceedings of the ACM on Human-Computer Interaction</i> 4, GROUP, 10: <span style="text-decoration: none">28 pages</span>.</span>
 
 (journal).</a><br />
@@ -134,22 +174,6 @@
 	<a href="https://doi.org/10.1145/3375190"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/jones2020wsar/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/dunlap2015sciencecaching"><span id="dunlap2015sciencecaching">Matthew A. Dunlap, Anthony Tang, and Saul Greenberg. (2015). <span style="text-decoration: underline">Applying geocaching principles to site-based citizen science and eliciting reactions via a technology probe</span>. <i>Personal and Ubiquitous Computing</i> 19, 5-6: <span style="text-decoration: none">897–913</span>.</span>
-
-(journal).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2015-puc-sciencecaching.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-
-
-	<a href="http://dx.doi.org/10.1007/s00779-015-0837-0"><i class="fa fa-external-link"></i></a>
-
-</section><a class="details" href="/papers/dunlap2015sciencecaching/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/huang2015pva"><span id="huang2015pva">Dandan Huang, Melanie Tory, Bon Adriel Aseniero, Lyn Bartram, Scott Bateman, Stacey Carpendale, Anthony Tang, and Robert Woodbury. (2015). <span style="text-decoration: underline">Personal Visualization and Personal Visual Analytics</span>. <i>IEEE Transactions on Visualization and Computer Graphics</i> 21, 3: <span style="text-decoration: none">420–433</span>.</span>
 
@@ -167,21 +191,21 @@
 
 </section><a class="details" href="/papers/huang2015pva/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/isenberg2013data"><span id="isenberg2013data">Petra Isenberg, Tobias Isenberg, Tobias Hesselmann, Bongshin Lee, Ulrich Von Zadow, and Anthony Tang. (2013). <span style="text-decoration: underline">Data visualization on interactive surfaces: A research agenda</span>. <i>Computer Graphics and Applications, IEEE</i> 33, 2: <span style="text-decoration: none">16–24</span>.</span>
+    <a href="/papers/dunlap2015sciencecaching"><span id="dunlap2015sciencecaching">Matthew A. Dunlap, Anthony Tang, and Saul Greenberg. (2015). <span style="text-decoration: underline">Applying geocaching principles to site-based citizen science and eliciting reactions via a technology probe</span>. <i>Personal and Ubiquitous Computing</i> 19, 5-6: <span style="text-decoration: none">897–913</span>.</span>
 
 (journal).</a><br />
 
 
 
 
-	<a href="http://hcitang.org/papers/2013-cga-data-visualization-on-interactive-surfaces.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2015-puc-sciencecaching.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-	<a href="http://doi.ieeecomputersociety.org/10.1109/MCG.2013.24"><i class="fa fa-external-link"></i></a>
+	<a href="http://dx.doi.org/10.1007/s00779-015-0837-0"><i class="fa fa-external-link"></i></a>
 
-</section><a class="details" href="/papers/isenberg2013data/"><!-- --></a></li>
+</section><a class="details" href="/papers/dunlap2015sciencecaching/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/neustaedter2013creating"><span id="neustaedter2013creating">Carman Neustaedter, Anthony Tang, and Tejinder K. Judge. (2013). <span style="text-decoration: underline">Creating scalable location-based games: lessons from Geocaching</span>. <i>Personal Ubiquitous Comput.</i> 17, 2: <span style="text-decoration: none">335–349</span>.</span>
 
@@ -198,6 +222,22 @@
 	<a href="http://dx.doi.org/10.1007/s00779-011-0497-7"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/neustaedter2013creating/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/isenberg2013data"><span id="isenberg2013data">Petra Isenberg, Tobias Isenberg, Tobias Hesselmann, Bongshin Lee, Ulrich Von Zadow, and Anthony Tang. (2013). <span style="text-decoration: underline">Data visualization on interactive surfaces: A research agenda</span>. <i>Computer Graphics and Applications, IEEE</i> 33, 2: <span style="text-decoration: none">16–24</span>.</span>
+
+(journal).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2013-cga-data-visualization-on-interactive-surfaces.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+
+	<a href="http://doi.ieeecomputersociety.org/10.1109/MCG.2013.24"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/isenberg2013data/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/miyaoku2007c"><span id="miyaoku2007c">Kento Miyaoku, Anthony Tang, and Sidney Fels. (2007). <span style="text-decoration: underline">C-Band: A Ring Tag System Using A Color Pattern Code</span>. <i>Information Processing Society of Japan Journal</i> 48, 3: <span style="text-decoration: none">1361–1371</span>.</span>
 
@@ -2100,6 +2140,8 @@
 
 	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
+
+	<a href="https://www.youtube.com/watch?v=jS_YljK-i0s"><i class="fa fa-sticky-note-o"></i></a>
 
 
 
