--- a/papers/kudo2021balancing/index.html
+++ b/papers/kudo2021balancing/index.html
@@ -79,7 +79,7 @@
 						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. In <i>ISS 2021: Proceedings of the 2021 Interactional Conference on Interactive Surfaces and Spaces</i>.</span>
+<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
 
 
 
@@ -95,7 +95,11 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
 
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
 
 
 </p>
@@ -103,11 +107,15 @@
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{kudo2021balancing,<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
 &nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;booktitle = {ISS 2021: Proceedings of the 2021 Interactional Conference on Interactive Surfaces and Spaces},<br />
+&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
 &nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;type = {paper},<br />
+&nbsp;&nbsp;number = {Article 484},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
+&nbsp;&nbsp;type = {journal},<br />
+&nbsp;&nbsp;volume = {5, ISS},<br />
 &nbsp;&nbsp;year = {2021}<br />
 }<br />
 </p>
