--- a/papers/li2021routetapestries/index.html
+++ b/papers/li2021routetapestries/index.html
@@ -83,6 +83,8 @@
 
 
 
+	<small>Acceptance: 95/367 - 25.9%.</small>
+
 </p>
 
 <h2>Abstract</h2>
@@ -95,7 +97,13 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf)</a><br/>
 
+
+	<a href="https://www.youtube.com/watch?v=0uAhUxJXgpc"><i class="fa fa-sticky-note-o"></i> URL (https://www.youtube.com/watch?v=0uAhUxJXgpc)</a><br/>
+
+
+	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4)</a><br/>
 
 
 </p>
@@ -108,7 +116,11 @@
 &nbsp;&nbsp;booktitle = {UIST 2021: Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology},<br />
 &nbsp;&nbsp;title = {Route Tapestries: Navigating 360 Virtual Tour Videos Using Slit-Scan Visualizations},<br />
 &nbsp;&nbsp;type = {paper},<br />
-&nbsp;&nbsp;year = {2021}<br />
+&nbsp;&nbsp;year = {2021},<br />
+&nbsp;&nbsp;acceptance = {95/367 - 25.9%},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4},<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=0uAhUxJXgpc}<br />
 }<br />
 </p>
 					</div>
