--- a/papers/mahadevan2021hri/index.html
+++ b/papers/mahadevan2021hri/index.html
@@ -102,6 +102,8 @@
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf)</a><br/>
 
 
+	<a href="https://www.youtube.com/watch?v=Fvn_qjWJqwk"><i class="fa fa-sticky-note-o"></i> URL (https://www.youtube.com/watch?v=Fvn_qjWJqwk)</a><br/>
+
 
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4)</a><br/>
 
@@ -120,7 +122,8 @@
 &nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
 &nbsp;&nbsp;notes = {Best Paper Nominee (top 5{\%} of submissions)},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4}<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4},<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=Fvn_qjWJqwk}<br />
 }<br />
 </p>
 					</div>
