--- a/papers/poretski2021whatsapplbw/index.html
+++ b/papers/poretski2021whatsapplbw/index.html
@@ -98,6 +98,8 @@
 	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf)</a><br/>
 
 
+	<a href="https://www.youtube.com/watch?v=jS_YljK-i0s"><i class="fa fa-sticky-note-o"></i> URL (https://www.youtube.com/watch?v=jS_YljK-i0s)</a><br/>
+
 
 
 </p>
@@ -111,7 +113,8 @@
 &nbsp;&nbsp;title = {Immigrant Families' Health-Related Information Behaviour on Instant Messaging Platforms},<br />
 &nbsp;&nbsp;type = {poster},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf},<br />
-&nbsp;&nbsp;year = {2021}<br />
+&nbsp;&nbsp;year = {2021},<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=jS_YljK-i0s}<br />
 }<br />
 </p>
 					</div>
