--- a/papers/pratte2021empathy/index.html
+++ b/papers/pratte2021empathy/index.html
@@ -100,6 +100,8 @@
 	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf)</a><br/>
 
 
+	<a href="https://www.youtube.com/watch?v=JBCzPt5ILxo"><i class="fa fa-sticky-note-o"></i> URL (https://www.youtube.com/watch?v=JBCzPt5ILxo)</a><br/>
+
 
 
 </p>
@@ -114,7 +116,8 @@
 &nbsp;&nbsp;type = {paper},<br />
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {29.9% - 30/134},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf}<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf},<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=JBCzPt5ILxo}<br />
 }<br />
 </p>
 					</div>
