--- a/papers/index.html
+++ b/papers/index.html
@@ -117,6 +117,34 @@
 					<div id="content">
 						<!-- Content -->
 						
+<p>2022</p>
+
+<h1><a name="2022"></a>2022</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/jones2022rescuecastr"><span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 4, GROUP.</span>
+
+(journal).</a><br />
+
+
+
+
+
+
+
+</section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li></ol>
+
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/pratte2021empathy"><span id="pratte2021empathy">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2021). <span style="text-decoration: underline">Evoking Empathy: A Framework for Describing Empathy Tools</span>. In <i>TEI 2021: International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
@@ -133,6 +161,8 @@
 	<a href="http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+	<a href="https://www.youtube.com/watch?v=JBCzPt5ILxo"><i class="fa fa-sticky-note-o"></i></a>
+
 
 
 </section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li>
@@ -141,10 +171,20 @@
 
 (paper).</a><br />
 
+	<small>Acceptance: 95/367 - 25.9%.</small>
 
 
 
+	<br />
 
+
+	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://www.youtube.com/watch?v=0uAhUxJXgpc"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/li2021routetapestries/"><!-- --></a></li>
@@ -191,6 +231,8 @@
 	<a href="http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+	<a href="https://www.youtube.com/watch?v=jS_YljK-i0s"><i class="fa fa-sticky-note-o"></i></a>
+
 
 
 </section><a class="details" href="/papers/poretski2021whatsapplbw/"><!-- --></a></li>
@@ -231,20 +273,26 @@
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
+	<a href="https://www.youtube.com/watch?v=Fvn_qjWJqwk"><i class="fa fa-sticky-note-o"></i></a>
+
 
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. In <i>ISS 2021: Proceedings of the 2021 Interactional Conference on Interactive Surfaces and Spaces</i>.</span>
+    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
 
-(paper).</a><br />
-
-
+(journal).</a><br />
 
 
 
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i></a>
 
 
 </section><a class="details" href="/papers/kudo2021balancing/"><!-- --></a></li></ol>
